[build-system]
requires = [ "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_wrapper"
dynamic = [ "version" ]
authors = [
    { name = "yutang" },
]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "vuer[all]==0.0.60",
    "avp_stream",
    "opencv-python",
]
